# ark-dialog-eval

./: .gitignore  README.md  build.sh  changed_files.txt  dev.sh  start.sh
backend/: .env.sample  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/core/bu/: base.py  life_insurance.py  registry.py  securities.py
backend/app/core/eval/: advisor.py  answer_parser.py  judge.py  metrics.py  pipeline.py  prompt_loader.py
backend/app/core/eval/prompts/: judge_user.md  judge_user.txt
backend/app/core/eval/prompts/_default/: advice_user.md  task_business_type.md  task_dispatch.txt  task_factual.txt  task_resolved.md  task_review.txt
backend/app/core/eval/prompts/securities/: task_dispatch.md
backend/app/core/llm/: judge_runner.py  mock_judge.py  pingan_client.py  signature.py
backend/app/services/: evaluator.py  store.py  task_manager.py
backend/data/sample/: pa_dialog_calib_2000.xlsx  pa_dialog_eval_sample.xlsx  pa_dialog_prod_3000.xlsx  securities_dialog_calib_2000.xlsx
backend/scripts/: check_pingan.py  make_large_sample.py  make_sample.py  run_calibration.py
backend/tests/: test_answer_parser.py  test_bu.py  test_eval_contract.py  test_metrics_and_judge.py  test_modes_and_insights.py  test_parse_advice.py  test_pipeline.py  test_prompt_layering.py  test_tiered_judge.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AdvicePanel.jsx  (+9 more)
skill/dialog-eval/: README.md  ROADMAP.md  SKILL.md
(+8 files in other folders)
