[project]
name = "ark-dialog-eval"
version = "0.2.0"
description = "Ark 对话评测平台 - 平安多 BU(证券/寿险)LLM-as-a-Judge 自动化评测流水线"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "python-multipart>=0.0.20",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "openpyxl>=3.1.5",
    "httpx>=0.27.0",
    "pycryptodome>=3.23.0",
    "pycryptodomex>=3.23.0",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
